--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -159,4 +167,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-
